style.css
body, td, th {
  font-family: 'Open Sans', sans-serif;
}
h2 {
  margin-top: 3ex;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Your Preferred Font', sans-serif; /* Replace with your preferred font */
  font-weight: 700; /* 700 is equivalent to bold, higher values for bolder text */
}
/* Deep blues */
.color-primary-0 { color: #233BF5 }
.color-primary-1 { color: #3314DE }
.color-primary-2 { color: #7717FA }
.color-primary-3 { color: #1461DE }
.color-primary-4 { color: #17A9FA }

.nd-pageheader {
  padding: 2rem 15px;
  margin-bottom: 1.5rem;
  color: white;
  text-align: center;
  background-color: #020202;
}

.center-image {
  display: block;
  margin-left: auto;
  margin-right: auto;
}


table {
  width: 100%;
  border-collapse: collapse;
  margin-bottom: 20px;
}

th, td {
  padding: 8px;
  text-align: left;
  border-bottom: 1px solid #ddd;
}

th {
  background-color: #f2f2f2;
}

td img {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  margin-right: 15px;
}

.figcaption {
  text-align: center;
  font-weight: bold;
  margin-top: 5px;
}

td p {
  margin: 0;
  color: #555;
}

/* Hover effect */
tr:hover {background-color: #f5f5f5;}





.nd-pageheader a, .nd-pageheader a.likelink {
  color: #e4f1fe;
}

.nd-pagefooter {
  color: white;
  margin-top: 1.5rem;
  padding: 1rem;
  text-align: center;
  background-color: #050505;
}

.nd-pagefooter a {
  color: #e4f1fe;
}

.nd-pageheader .container {
  position: relative
}

.nd-pageheader address {
  font-weight: 300;
}

.nd-pageheader p, .nd-pageheader h1 {
  margin-bottom: 0.75rem;
  font-size: 2.25rem;
  font-weight: 300;
  line-height: 1.3;
}

.citation {
  margin-top: 15px;
  clear: both;
}
.citation:after {
  content: '';
  display: table;
  clear: both;
}
.citation img {
  float: left;
  margin: 0 10px 10px 0;
  width: 250px;
}
nobr.widenobr {
  white-space: normal;
}

